--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,12 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-
+  <style>
+    body {
+      /* because navbar is fixed */
+      padding-top: 3.3em;
+    }
+  </style>
 </head>
 
 <body>
